--- a/css/base.css
+++ b/css/base.css
@@ -1,10 +1,13 @@
+/*Add Roboto Webfont as Default*/
+@import 'https://fonts.googleapis.com/css?family=Roboto';
 html {
-    font: 400 14px/20px Helvetica, Arial, sans-serif;
+    font: 400 14px/20px "Roboto", Helvetica, Arial, sans-serif;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
     background: #fff;
     color: #444
 }
+
 body {
     margin: 0
 }
